force-app/main/default/objects/SAJ_App_Component__c/SAJ_App_Component__c.object-meta.xml
<CustomObject>
    <label>App Component</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>App Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>App Components</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>