force-app/main/default/objects/SAJ_App_Component__c/fields/SAJ_App__c.field-meta.xml
<CustomField>
    <fullName>SAJ_App__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>App</label>
    <referenceTo>SAJ_App__c</referenceTo>
    <relationshipLabel>App Components</relationshipLabel>
    <relationshipName>App_Components</relationshipName>
    <type>Lookup</type>
</CustomField>