force-app/main/default/objects/SAJ_App_Component__c/fields/SAJ_App_Component_Id__c.field-meta.xml
<CustomField>
    <fullName>SAJ_App_Component_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>App Component Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>