force-app/main/default/objects/SAJ_App_Component__c/fields/SAJ_App_Component_Key__c.field-meta.xml
<CustomField>
    <fullName>SAJ_App_Component_Key__c</fullName>
    <externalId>true</externalId>
    <label>App Component Key</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>