force-app/main/default/objects/SAJ_App_Component__c/fields/SAJ_App_Component_Type__c.field-meta.xml
<CustomField>
    <fullName>SAJ_App_Component_Type__c</fullName>
    <formula>TEXT(SAJ_MDC_Component__r.SAJ_Object_Type__c)</formula>
    <label>App Component Type</label>
    <type>Text</type>
</CustomField>