force-app/main/default/objects/SAJ_App_Component__c/fields/SAJ_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Component_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Component Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>