force-app/main/default/objects/SAJ_App_Component__c/fields/SAJ_Dependency_Level__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Dependency_Level__c</fullName>
    <formula>IF( ISBLANK(SAJ_Level_1_App_Component__c),1, IF(ISBLANK(SAJ_Level_2_App_Component__c),2,3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependency Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>