force-app/main/default/objects/SAJ_App_Component__c/fields/SAJ_Level_1_App_Component__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Level_1_App_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level 1 App Component</label>
    <referenceTo>SAJ_App_Component__c</referenceTo>
    <relationshipLabel>App Components level 1</relationshipLabel>
    <relationshipName>App_Components1</relationshipName>
    <type>Lookup</type>
</CustomField>