force-app/main/default/objects/SAJ_App_Component__c/fields/SAJ_Level_2_App_Component__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Level_2_App_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level 2 App Component</label>
    <referenceTo>SAJ_App_Component__c</referenceTo>
    <relationshipLabel>App Components (Level 2 App Component)</relationshipLabel>
    <relationshipName>App_Components2</relationshipName>
    <type>Lookup</type>
</CustomField>