force-app/main/default/objects/SAJ_App_Component__c/fields/SAJ_Match_Dependency__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Match_Dependency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match Dependency</label>
    <type>Checkbox</type>
</CustomField>