force-app/main/default/objects/SAJ_App_Component__c/fields/SAJ_Match_PermissionSet__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Match_PermissionSet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match PermissionSet</label>
    <type>Checkbox</type>
</CustomField>