force-app/main/default/objects/SAJ_App_Component__c/fields/SAJ_MDC_Component__c.field-meta.xml
<CustomField>
    <fullName>SAJ_MDC_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MDC Component</label>
    <referenceTo>SAJ_MDC_Component__c</referenceTo>
    <relationshipLabel>App Components</relationshipLabel>
    <relationshipName>App_Components</relationshipName>
    <type>Lookup</type>
</CustomField>