force-app/main/default/objects/SAJ_App_Component__c/fields/SAJ_Permissions__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Permissions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>C- Create; R- Read; E- Edit; D- Delete; M- ModifyAll; V- ViewAll</inlineHelpText>
    <label>Permissions</label>
    <length>10</length>
    <type>Text</type>
</CustomField>