force-app/main/default/objects/SAJ_App_Component__c/fields/SAJ_Source_Org__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Source_Org__c</fullName>
    <formula>SAJ_MDC_Component__r.SAJ_Source_Org__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Org</label>
    <type>Text</type>
</CustomField>