force-app/main/default/objects/SAJ_App_Component__c/fields/SAJ_Test_Covered__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Test_Covered__c</fullName>
    <label>Test Covered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>