force-app/main/default/objects/SAJ_App_Component__c/fields/SAJ_VAR_Aggregate_Covered_Percent__c.field-meta.xml
<CustomField>
    <fullName>SAJ_VAR_Aggregate_Covered_Percent__c</fullName>
    <formula>IF((SAJ_Test_Aggregate_Covered__c + SAJ_Test_Aggregate_Uncovered__c)&gt;0,SAJ_Test_Aggregate_Covered__c / (SAJ_Test_Aggregate_Covered__c + SAJ_Test_Aggregate_Uncovered__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAR Aggregate Covered Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>