force-app/main/default/objects/SAJ_App_Component__c/fields/SAJ_VAR_Apex_Test__c.field-meta.xml
<CustomField>
    <fullName>SAJ_VAR_Apex_Test__c</fullName>
    <formula>SAJ_MDC_Component__r.SAJ_VAR_Apex_Test__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAR Apex Test</label>
    <type>Checkbox</type>
</CustomField>